# Rehearsal-Kit

./: .gitignore  ExecPlan.md  OnGoing.md  README.md  README_cn.md  TEST.md  code_idea.md  pyproject.toml
docs/: about.rst  api.rst  architecture.md  architecture.rst  cme_agent.md  conf.py  contributing.rst  experiments.rst  icml_agent.md  index.rst  installation.rst  methods.rst  mur_agent.md  quickstart.rst  reference.rst
docs/_templates/: breadcrumbs.html
examples/care/: care_bermuda_example.py  care_manage_example.py  care_toy_experiment.py
examples/cme/: cme_bermuda_example.py  cme_toy_experiment.py
examples/grad_rh/: bermuda_example.py
examples/inp/: bermuda_inp_example.py  doctor_inp_example.py
examples/micns/: bermuda_example.py
examples/msr/: bermuda_example.py
html/: index.html
outputs/: care_bermuda_seed1.json  care_bermuda_seed3.json  cme_bermuda_seed1.json  cme_bermuda_seed3.json  grad_rh_bermuda_seed1.json  grad_rh_bermuda_seed3.json  inp_bermuda_measures.json  inp_doctor_measures.json  micns_bermuda_seed1.json  micns_bermuda_seed3.json  msr_bermuda_seed1.json  msr_bermuda_seed3.json  mur_bermuda_seed3.json  olem_rh_bermuda_seed1.json  olem_rh_bermuda_seed3.json  qwz23_bermuda_seed1.json  qwz23_bermuda_seed3.json
tests/: conftest.py  test_ace_measures.py  test_cme_rh.py  test_experiment_runner.py  test_grad_rh.py  test_icml2025_care.py  test_icml2025_dataset_reproduction.py  test_inp_bermuda_example.py  test_inp_doctor_example.py  test_inp_measures.py  test_installed_demo.py  test_micns.py  test_msr.py  test_mur.py  test_olem_rh.py  test_order_optional_dependencies.py  test_qwz23.py  test_rehearsal_datasets.py  test_shared_linear_gaussian_srm.py  test_unpublished_cme.py
(+94 files in other folders)
