[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rehearsal"
version = "0.1.1"
description = "Unified framework for rehearsal-learning research code."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
bermuda = [
    "scipy>=1.9",
]
qwz23 = [
    "scipy>=1.9",
]
dev = [
    "pytest",
]
publish = [
    "build",
    "twine",
]

[project.scripts]
rehearsal-demo = "rehearsal.experiments.demo:main"
rehearsal-run = "rehearsal.experiments.run:main"
rehearsal-icml2025-reproduce = "rehearsal.experiments.icml2025_reproduce:main"
rehearsal-care-reproduce = "rehearsal.experiments.icml2025_reproduce:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rehearsal = ["datasets/data/*.mat"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
